--- a/css/style.css
+++ b/css/style.css
@@ -162,4 +162,265 @@ a {
 }
 .courses__content .img .img__hover:hover {
   opacity: 1;
+}
+
+.about {
+  width: 100%;
+  padding: 4rem 0;
+}
+.about .title {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.about .title h2 {
+  font-size: 2rem;
+}
+
+.about__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+  align-items: center;
+}
+.about__content .item {
+  border: 2px solid red;
+  padding: 2rem;
+}
+.about__content .item span {
+  font-family: var(--mono);
+}
+.about__content .item h2 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-family: var(--roboto);
+}
+.about__content .item p {
+  font-family: var(--real);
+  margin-bottom: 1rem;
+}
+.about__content .item h3 {
+  font-family: var(--real);
+  opacity: 0.7;
+}
+.about__content .item__img .img {
+  position: relative;
+}
+.about__content .item__img .img i {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 0;
+  font-size: 2rem;
+  background-color: rgb(231, 118, 47);
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  color: #fff;
+}
+
+.blog {
+  width: 100%;
+  padding: 4rem 0;
+}
+.blog .title {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.blog .title h2 {
+  font-size: 2rem;
+}
+.blog button {
+  padding: 7px 15px;
+  background-color: orange;
+  color: red;
+  font-size: 1.2rem;
+  border-radius: 30px;
+  border: 0;
+  transition: all 0.5s ease;
+}
+.blog button:hover {
+  background-color: black;
+  color: white;
+}
+
+.blog__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+  align-items: center;
+  margin-top: 2rem;
+  border: 2px solid black;
+  padding: 1rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
+.blog__content h2 {
+  font-family: var(--real);
+  margin-bottom: 1rem;
+}
+.blog__content p {
+  opacity: 0.6;
+}
+
+.testimonial {
+  width: 100%;
+  padding: 4rem 0;
+  color: #fff;
+  background-color: #000000;
+}
+.testimonial .title {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.testimonial .title h2 {
+  font-size: 2rem;
+  display: inline;
+  border-bottom: 1px solid white;
+}
+
+.test__content {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  gap: 3rem;
+  align-items: center;
+}
+.test__content h2 {
+  font-size: 2.3rem;
+  font-family: var(--open);
+  margin-bottom: 0.5rem;
+}
+.test__content p {
+  opacity: 0.9;
+}
+
+.casting {
+  width: 100%;
+  padding: 4rem 0;
+}
+.casting .title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.casting .title button {
+  padding: 7px 15px;
+  background-color: black;
+  color: red;
+  font-size: 1.2rem;
+  border-radius: 30px;
+  border: 0;
+  transition: all 0.5s ease;
+  height: 40px;
+}
+.casting .title button:hover {
+  background-color: orange;
+  color: white;
+}
+
+.map {
+  width: 100%;
+}
+
+.map__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+  gap: 0;
+}
+.map__content .item {
+  position: relative;
+}
+.map__content .item img {
+  filter: brightness(60%);
+}
+.map__content .item h2 {
+  width: 30%;
+  text-align: center;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  color: #fff;
+  font-size: 3rem;
+}
+.map__content .map__item iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  width: 100%;
+  padding: 4rem 0;
+  background-color: #2b2b2b;
+}
+.footer form {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 3rem;
+}
+.footer form input {
+  width: 80%;
+  height: 7vh;
+  text-indent: 10px;
+  font-size: 1.2rem;
+  border-radius: 30px;
+}
+.footer form button {
+  padding: 7px 15px;
+  background-color: black;
+  color: red;
+  font-size: 1.2rem;
+  border-radius: 30px;
+  border: 0;
+  transition: all 0.5s ease;
+  height: 40px;
+}
+.footer form button:hover {
+  background-color: orange;
+  color: white;
+}
+
+.footer__content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 3rem;
+  align-items: center;
+}
+.footer__content .item {
+  border-right: 1px solid white;
+  color: #fff;
+}
+.footer__content .item:last-of-type {
+  border: 0;
+}
+.footer__content .item a {
+  display: block;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  color: #fff;
+}
+.footer__content .item a img {
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  display: inline;
+}
+.footer__content .item p {
+  width: 50%;
+  line-height: 2;
+  margin-top: 1rem;
+  opacity: 0.8;
+}
+.footer__content .item img {
+  height: 120px;
+}
+
+.copyRight {
+  width: 100%;
+  padding: 1rem 0;
+  text-align: center;
+  font-size: 1.2rem;
 }/*# sourceMappingURL=style.css.map */
