--- a/css/style.scss
+++ b/css/style.scss
@@ -151,4 +151,223 @@
             }
         }
     }
+
  }
+
+ .about{
+    @include card();
+    .title{
+        @include title();
+        h2{
+            font-size: 2rem;
+        }
+    }
+ }
+
+ .about__content{
+    @include grid(repeat(2,1fr));
+    align-items: center;
+  .item{
+    border: 2px solid red;
+    padding: 2rem;
+    span{
+        font-family: var(--mono);
+    }
+    h2{
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        font-family: var(--roboto);
+    }
+    p{
+        font-family: var(--real);
+        margin-bottom: 1rem;
+    }
+    h3{
+        font-family: var(--real);
+        opacity: 0.7;
+    }
+  }
+
+  .item__img{
+    .img{
+        position: relative;
+        i{
+            position: absolute;
+            transform: translate(-50%,-50%);
+            top: 50%;
+            left: 0;
+            font-size: 2rem;
+            background-color: rgb(231, 118, 47);
+            width: 60px;
+            height: 60px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
+            color: #fff;
+        }
+    }
+
+  }
+
+ }
+
+
+ .blog{
+    @include card();
+    .title{
+        @include title();
+        h2{
+            font-size: 2rem;
+        }
+    }
+    button{
+        @include btn(orange, red,black ,white )
+    }
+ }
+ .blog__content{
+    @include grid(repeat(2,1fr));
+    align-items: center;
+    margin-top: 2rem;
+    border: 2px solid black;
+    padding: 1rem ;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    h2{
+        font-family: var(--real);
+        margin-bottom: 1rem;
+    }
+    p{
+        opacity: 0.6;
+    }
+ }
+ .testimonial{
+    @include card();
+    color: #fff;
+    background-color: #000000;
+    .title{
+         @include title();
+         h2{
+            font-size: 2rem;
+            display: inline;
+            border-bottom: 1px solid white;
+
+         }
+    }
+ }
+ .test__content{
+    @include grid(20% 80%);
+    align-items: center;
+    h2{
+        font-size: 2.3rem;
+        font-family: var(--open);
+        margin-bottom: 0.5rem;
+    }
+    p{
+        opacity: 0.9;
+    }
+ }
+
+ .casting{
+    @include card();
+    .title{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+        button{
+            @include btn(black, red,orange ,white );
+            height: 40px;
+        }
+    }
+ }
+ .map{
+   width: 100%;
+}
+.map__content{
+    @include grid(repeat(2,1fr));
+    gap: 0;
+    .item{
+        position: relative;
+        img{
+            filter: brightness(60%);
+        }
+        h2{
+            width: 30%;
+            text-align: center;
+            position: absolute;
+            transform: translate(-50%, -50%);
+            top: 50%;
+            left: 50%;
+            color: #fff;
+            font-size: 3rem;
+
+        }
+    }
+    .map__item{
+        iframe
+        {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+.footer{
+    @include card();
+    background-color: #2b2b2b;
+    form{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 3rem;
+        input{
+            width: 80%;
+            height: 7vh;
+            text-indent: 10px;
+            font-size: 1.2rem;
+            border-radius: 30px;
+        }
+        button{
+            @include btn(black, red,orange ,white );
+            height: 40px;
+        }
+    }
+}
+
+.footer__content{
+    @include grid(repeat(4,1fr));
+    align-items: center;
+    .item{
+        border-right: 1px solid white;
+        color: #fff;
+        &:last-of-type{
+            border: 0;
+        }
+        a{
+            display: block;
+            margin-bottom: 1rem;
+            margin-top: 1rem;
+            color: #fff;
+            img{
+                margin-right: 10px;
+                width: 20px;
+                height: 20px;
+                display: inline;
+            }
+        }
+        p{
+            width: 50%;
+            line-height: 2;
+            margin-top: 1rem;
+            opacity: 0.8;
+        }
+        img{
+            height: 120px;
+        }
+    }
+}
+
+.copyRight{
+    width: 100%;
+    padding: 1rem 0;
+    text-align: center;
+    font-size: 1.2rem;
+}
